fix: padding caused cutoff

--- a/packages/frontend/src/components/Modals/LegalDisclaimer/LegalDisclaimer.css
+++ b/packages/frontend/src/components/Modals/LegalDisclaimer/LegalDisclaimer.css
@@ -10,10 +10,6 @@
     overflow-y: auto;
 }
 
-.legal-disclaimer .content ol {
-    padding-left: var(--padding-m);
-}
-
 .legal-disclaimer .content ol li::marker {
     color: var(--color-primary);
 }
